Adiciona rotas de usuário. Closes #2
